<resources>
    <string name="app_name">GridRegulation</string>
    <string name="all_select">全选</string>
    <string name="confrim">确定</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="qualified">合格</string>
    <string name="basic_qualified">基本合格</string>
    <string name="unqualified">不合格</string>
    <string name="check_method">检查方法></string>
    <string name="next">下一步</string>

    <string name="unqualified_reason">不合格的原因:</string>

    <string name="object_name">企业名称</string>
    <string name="regulator_name">检查人</string>
    <string name="regulate_date">检查日期</string>
    <string name="regulate_opinion">检查意见</string>
    <string name="edt_opinion">请输入检察意见</string>
    <string name="regulator_sign">检查人签字</string>
    <string name="sign">签字</string>
    <string name="clear">清除</string>

    <string name="site_regulate">现场检查</string>
    <string name="safty_problem_report">线索上报</string>
    <string name="personal_center">个人中心</string>

</resources>
