<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="表1" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/ckb_select"
        android:text="检查项1" />

    <LinearLayout
        android:id="@+id/lauout_line_3"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@+id/tv_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_result"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_qualified"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/qualified" />

            <TextView
                android:id="@+id/tv_basic_qualified"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/basic_qualified" />

            <TextView
                android:id="@+id/tv_unqualified"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/unqualified" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:text="@string/check_method" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_unqualified_reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lauout_line_3"
        android:layout_marginTop="10dp"
        android:text="不合格"
        android:textColor="@color/red"
        android:visibility="invisible" />


</RelativeLayout>